// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TieredReplicant matches snapshot when disabled 1`] = `
<div
  class="bp5-control-group tiered-replicant"
  role="group"
>
  <button
    class="bp5-button bp5-disabled bp5-minimal"
    disabled=""
    style="pointer-events: none;"
    tabindex="-1"
    type="button"
  >
    <span
      class="bp5-button-text"
    >
      Tier:
    </span>
  </button>
  <div
    class="formatted-input suggestible-input"
  >
    <div
      class="bp5-input-group bp5-disabled bp5-fill"
    >
      <input
        aria-disabled="true"
        class="bp5-input"
        disabled=""
        style="padding-right: 0px;"
        type="text"
        value="test1"
      />
      <span
        class="bp5-input-action"
      >
        <span
          class="bp5-popover-target"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="bp5-button bp5-minimal"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp5-icon bp5-icon-caret-down"
            >
              <svg
                data-icon="caret-down"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
  </div>
  <button
    class="bp5-button bp5-disabled bp5-minimal"
    disabled=""
    style="pointer-events: none;"
    tabindex="-1"
    type="button"
  >
    <span
      class="bp5-button-text"
    >
      Replicants:
    </span>
  </button>
  <div
    class="bp5-control-group bp5-numeric-input"
    role="group"
  >
    <div
      class="bp5-input-group bp5-disabled"
    >
      <input
        aria-disabled="true"
        aria-valuemax="256"
        aria-valuemin="0"
        aria-valuenow="3"
        autocomplete="off"
        class="bp5-input"
        disabled=""
        id="numericInput-2"
        max="256"
        min="0"
        role="spinbutton"
        type="text"
        value="3"
      />
    </div>
    <div
      class="bp5-button-group bp5-vertical bp5-fixed"
    >
      <button
        aria-controls="numericInput-2"
        aria-label="increment"
        class="bp5-button bp5-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-chevron-up"
        >
          <svg
            data-icon="chevron-up"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
              fill-rule="evenodd"
              style="transform-origin: center;"
              transform="scale(0.05, -0.05) translate(-160, -160)"
            />
          </svg>
        </span>
      </button>
      <button
        aria-controls="numericInput-2"
        aria-label="decrement"
        class="bp5-button bp5-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-chevron-down"
        >
          <svg
            data-icon="chevron-down"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
              fill-rule="evenodd"
              style="transform-origin: center;"
              transform="scale(0.05, -0.05) translate(-160, -160)"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <button
    class="bp5-button"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp5-icon bp5-icon-trash"
    >
      <svg
        data-icon="trash"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`TieredReplicant matches snapshot with existing tier 1`] = `
<div
  class="bp5-control-group tiered-replicant"
  role="group"
>
  <button
    class="bp5-button bp5-minimal"
    style="pointer-events: none;"
    type="button"
  >
    <span
      class="bp5-button-text"
    >
      Tier:
    </span>
  </button>
  <div
    class="formatted-input suggestible-input"
  >
    <div
      class="bp5-input-group bp5-fill"
    >
      <input
        aria-disabled="false"
        class="bp5-input"
        style="padding-right: 0px;"
        type="text"
        value="test1"
      />
      <span
        class="bp5-input-action"
      >
        <span
          class="bp5-popover-target"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="bp5-button bp5-minimal"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp5-icon bp5-icon-caret-down"
            >
              <svg
                data-icon="caret-down"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
  </div>
  <button
    class="bp5-button bp5-minimal"
    style="pointer-events: none;"
    type="button"
  >
    <span
      class="bp5-button-text"
    >
      Replicants:
    </span>
  </button>
  <div
    class="bp5-control-group bp5-numeric-input"
    role="group"
  >
    <div
      class="bp5-input-group"
    >
      <input
        aria-disabled="false"
        aria-valuemax="256"
        aria-valuemin="0"
        aria-valuenow="2"
        autocomplete="off"
        class="bp5-input"
        id="numericInput-0"
        max="256"
        min="0"
        role="spinbutton"
        type="text"
        value="2"
      />
    </div>
    <div
      class="bp5-button-group bp5-vertical bp5-fixed"
    >
      <button
        aria-controls="numericInput-0"
        aria-label="increment"
        class="bp5-button"
        type="button"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-chevron-up"
        >
          <svg
            data-icon="chevron-up"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
              fill-rule="evenodd"
              style="transform-origin: center;"
              transform="scale(0.05, -0.05) translate(-160, -160)"
            />
          </svg>
        </span>
      </button>
      <button
        aria-controls="numericInput-0"
        aria-label="decrement"
        class="bp5-button"
        type="button"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-chevron-down"
        >
          <svg
            data-icon="chevron-down"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
              fill-rule="evenodd"
              style="transform-origin: center;"
              transform="scale(0.05, -0.05) translate(-160, -160)"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <button
    class="bp5-button"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp5-icon bp5-icon-trash"
    >
      <svg
        data-icon="trash"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`TieredReplicant matches snapshot with multiple used tiers 1`] = `
<div
  class="bp5-control-group tiered-replicant"
  role="group"
>
  <button
    class="bp5-button bp5-minimal"
    style="pointer-events: none;"
    type="button"
  >
    <span
      class="bp5-button-text"
    >
      Tier:
    </span>
  </button>
  <div
    class="formatted-input suggestible-input"
  >
    <div
      class="bp5-input-group bp5-fill"
    >
      <input
        aria-disabled="false"
        class="bp5-input"
        style="padding-right: 0px;"
        type="text"
        value="test3"
      />
      <span
        class="bp5-input-action"
      >
        <span
          class="bp5-popover-target"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="bp5-button bp5-minimal"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp5-icon bp5-icon-caret-down"
            >
              <svg
                data-icon="caret-down"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
  </div>
  <button
    class="bp5-button bp5-minimal"
    style="pointer-events: none;"
    type="button"
  >
    <span
      class="bp5-button-text"
    >
      Replicants:
    </span>
  </button>
  <div
    class="bp5-control-group bp5-numeric-input"
    role="group"
  >
    <div
      class="bp5-input-group"
    >
      <input
        aria-disabled="false"
        aria-valuemax="256"
        aria-valuemin="0"
        aria-valuenow="5"
        autocomplete="off"
        class="bp5-input"
        id="numericInput-4"
        max="256"
        min="0"
        role="spinbutton"
        type="text"
        value="5"
      />
    </div>
    <div
      class="bp5-button-group bp5-vertical bp5-fixed"
    >
      <button
        aria-controls="numericInput-4"
        aria-label="increment"
        class="bp5-button"
        type="button"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-chevron-up"
        >
          <svg
            data-icon="chevron-up"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
              fill-rule="evenodd"
              style="transform-origin: center;"
              transform="scale(0.05, -0.05) translate(-160, -160)"
            />
          </svg>
        </span>
      </button>
      <button
        aria-controls="numericInput-4"
        aria-label="decrement"
        class="bp5-button"
        type="button"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-chevron-down"
        >
          <svg
            data-icon="chevron-down"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
              fill-rule="evenodd"
              style="transform-origin: center;"
              transform="scale(0.05, -0.05) translate(-160, -160)"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <button
    class="bp5-button"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp5-icon bp5-icon-trash"
    >
      <svg
        data-icon="trash"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`TieredReplicant matches snapshot with non-existing tier 1`] = `
<div
  class="bp5-control-group tiered-replicant"
  role="group"
>
  <button
    class="bp5-button bp5-minimal"
    style="pointer-events: none;"
    type="button"
  >
    <span
      class="bp5-button-text"
    >
      Tier:
    </span>
  </button>
  <div
    class="formatted-input suggestible-input"
  >
    <div
      class="bp5-input-group bp5-fill"
    >
      <input
        aria-disabled="false"
        class="bp5-input"
        style="padding-right: 0px;"
        type="text"
        value="nonexist"
      />
      <span
        class="bp5-input-action"
      >
        <span
          class="bp5-popover-target"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="bp5-button bp5-minimal"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp5-icon bp5-icon-caret-down"
            >
              <svg
                data-icon="caret-down"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
  </div>
  <button
    class="bp5-button bp5-minimal"
    style="pointer-events: none;"
    type="button"
  >
    <span
      class="bp5-button-text"
    >
      Replicants:
    </span>
  </button>
  <div
    class="bp5-control-group bp5-numeric-input"
    role="group"
  >
    <div
      class="bp5-input-group"
    >
      <input
        aria-disabled="false"
        aria-valuemax="256"
        aria-valuemin="0"
        aria-valuenow="1"
        autocomplete="off"
        class="bp5-input"
        id="numericInput-1"
        max="256"
        min="0"
        role="spinbutton"
        type="text"
        value="1"
      />
    </div>
    <div
      class="bp5-button-group bp5-vertical bp5-fixed"
    >
      <button
        aria-controls="numericInput-1"
        aria-label="increment"
        class="bp5-button"
        type="button"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-chevron-up"
        >
          <svg
            data-icon="chevron-up"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
              fill-rule="evenodd"
              style="transform-origin: center;"
              transform="scale(0.05, -0.05) translate(-160, -160)"
            />
          </svg>
        </span>
      </button>
      <button
        aria-controls="numericInput-1"
        aria-label="decrement"
        class="bp5-button"
        type="button"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-chevron-down"
        >
          <svg
            data-icon="chevron-down"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
              fill-rule="evenodd"
              style="transform-origin: center;"
              transform="scale(0.05, -0.05) translate(-160, -160)"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <button
    class="bp5-button"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp5-icon bp5-icon-trash"
    >
      <svg
        data-icon="trash"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`TieredReplicant matches snapshot without remove button 1`] = `
<div
  class="bp5-control-group tiered-replicant"
  role="group"
>
  <button
    class="bp5-button bp5-minimal"
    style="pointer-events: none;"
    type="button"
  >
    <span
      class="bp5-button-text"
    >
      Tier:
    </span>
  </button>
  <div
    class="formatted-input suggestible-input"
  >
    <div
      class="bp5-input-group bp5-fill"
    >
      <input
        aria-disabled="false"
        class="bp5-input"
        style="padding-right: 0px;"
        type="text"
        value="test2"
      />
      <span
        class="bp5-input-action"
      >
        <span
          class="bp5-popover-target"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="bp5-button bp5-minimal"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp5-icon bp5-icon-caret-down"
            >
              <svg
                data-icon="caret-down"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
  </div>
  <button
    class="bp5-button bp5-minimal"
    style="pointer-events: none;"
    type="button"
  >
    <span
      class="bp5-button-text"
    >
      Replicants:
    </span>
  </button>
  <div
    class="bp5-control-group bp5-numeric-input"
    role="group"
  >
    <div
      class="bp5-input-group"
    >
      <input
        aria-disabled="false"
        aria-valuemax="256"
        aria-valuemin="0"
        aria-valuenow="1"
        autocomplete="off"
        class="bp5-input"
        id="numericInput-3"
        max="256"
        min="0"
        role="spinbutton"
        type="text"
        value="1"
      />
    </div>
    <div
      class="bp5-button-group bp5-vertical bp5-fixed"
    >
      <button
        aria-controls="numericInput-3"
        aria-label="increment"
        class="bp5-button"
        type="button"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-chevron-up"
        >
          <svg
            data-icon="chevron-up"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
              fill-rule="evenodd"
              style="transform-origin: center;"
              transform="scale(0.05, -0.05) translate(-160, -160)"
            />
          </svg>
        </span>
      </button>
      <button
        aria-controls="numericInput-3"
        aria-label="decrement"
        class="bp5-button"
        type="button"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-chevron-down"
        >
          <svg
            data-icon="chevron-down"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
              fill-rule="evenodd"
              style="transform-origin: center;"
              transform="scale(0.05, -0.05) translate(-160, -160)"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;
